# CMakeList.txt : CMake project for CMakeProject_jenkins_test, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeProject_jenkins_test "CMakeProject_jenkins_test.cpp" "CMakeProject_jenkins_test.h")

# TODO: Add tests and install targets if needed.
